<resources>
    <string name="app_name">P2P1JCG</string>
    <string name="rmasculino">Masculino</string>
    <string name="rfemenino">Femenino</string>
    <string name="mensaje">MENSAJE</string>
    <string name="Letrero1">Numero num1</string>
    <string name="Letrero2">Numero num2</string>
    <string name="rsuma">Suma</string>
    <string name="rresta">Resta</string>
    <string name="rmultiplicacion">Multiplicacion</string>
    <string name="rdivision">Division</string>
</resources>
